--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "black>=25.1.0",
+    "pytest>=8.0.0",
+    "pytest-cov>=5.0.0",
+    "pytest-mock>=3.14.0",
 ]
